--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,15 @@
                 {%- include projects.html -%}
             {%- endif -%}
 
-            {%- if site.data.experience.size > 0 -%}
+   <!---         {%- if site.data.experience.size > 0 -%}
                 {%- include experience.html -%}
-            {%- endif -%}
+            {%- endif -%}--->
 
             {%- if site.data.education.size > 0 -%}
                 {%- include education.html -%}
             {%- endif -%}
 
-            {%- include more.html -%}
+  <!---          {%- include more.html -%}--->
 
         </div>
     </main>
