--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -1,8 +1,6 @@
-<div class="container more-container">
-  <h3>{{ site.more_title | default: "Teaching" }}</h3>
-  <div class="row clearfix">
-    <div class="col-md-12">
-      {{ site.more_content | strip | markdownify }}
-    </div>
-  </div>
+<div class="container teaching-container">
+  <h3>{{ site.teaching_title | default: "Teaching" }}</h3>
+  {% for teaching in site.data.teaching %}
+    {% include {{ teaching.layout | default: 'left' | append: ".html" }} item=teaching %}
+  {% endfor %}
 </div>
