--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,9 @@
                 {%- include experience.html -%}
             {%- endif -%}--->
             
-            {%- if site.data.papers.size > 0 -%}
+      <!---           {%- if site.data.papers.size > 0 -%}
                 {%- include papers.html -%}
-            {%- endif -%}
+            {%- endif -%}--->
             
             {%- if site.data.teaching.size > 0 -%}
                 {%- include teaching.html -%}
