--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,12 @@
 {%- include head.html -%}
 
 <body>
+  
+    {%- include header.html -%}
+
+    {%- include footer.html -%}
+
+
 </body>
 
 </html>
