--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,15 @@
   
     {%- include header.html -%}
 
+    <main class="page-content" aria-label="Content">
+        <div class="wrapper">
+
+            {%- include about.html -%}
+
+            
+        </div>
+    </main>
+
     {%- include footer.html -%}
 
 
