--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,18 @@
         <div class="wrapper">
 
             {%- include about.html -%}
+          
+  <!---          {%- if site.data.projects.size > 0 -%}
+                {%- include projects.html -%}
+            {%- endif -%}--->
+
+   <!---         {%- if site.data.experience.size > 0 -%}
+                {%- include experience.html -%}
+            {%- endif -%}--->
+            
+      <!---           {%- if site.data.papers.size > 0 -%}
+                {%- include papers.html -%}
+            {%- endif -%}--->
 
             
         </div>
