--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,19 @@
         <div class="wrapper">
 
             {%- include about.html -%}
-          
-  <!---          {%- if site.data.projects.size > 0 -%}
-                {%- include projects.html -%}
-            {%- endif -%}--->
-
             
+            {%- if site.data.papers.size > 0 -%}
+                {%- include papers.html -%}
+            {%- endif -%}
+            
+            {%- if site.data.teaching.size > 0 -%}
+                {%- include teaching.html -%}
+            {%- endif -%}
+            
+            {%- if site.data.education.size > 0 -%}
+                {%- include education.html -%}
+            {%- endif -%}  
+          
         </div>
     </main>
 
