--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,11 @@
         <div class="wrapper">
 
             {%- include about.html -%}
+          
+<!--                     {%- if site.data.projects.size > 0 -%}
+                {%- include projects.html -%}
+            {%- endif -%} -->
+
             
             {%- if site.data.papers.size > 0 -%}
                 {%- include papers.html -%}
